--- a/src/app/views/works/works.component.html
+++ b/src/app/views/works/works.component.html
@@ -55,7 +55,7 @@
             <td>{{work.category.title}}</td>
             <td>{{work.subCategory.title}}</td>
             <td>
-              {{work.localDate.split('-')[2] }}.{{work.localDate.split('-')[1] }}.{{work.localDate.split('-')[0] }}</td>
+              {{work.creationDate.split('-')[2] }}.{{work.creationDate.split('-')[1] }}.{{work.creationDate.split('-')[0] }}</td>
             <td>
               <!--              <a class="btn btn-info" (click)="showAddTaskComponent(task)">Изменить</a>-->
               <!--              <button class="btn  btn-primary ml-3" (click)="deleteTask(task.id)">Удалить</button>-->
