--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <app-add-works #addWork (closeEvent)="works.loadWorks()"></app-add-works>
 
-  <app-categories (categoryEvent)="works.fillWorks()"></app-categories>
+  <app-categories (categoryEvent)="works.fillViewWorks()"></app-categories>
 
   <div class="main-panel">
     <!-- Navbar -->
