--- a/src/app/views/add-works/add-works.component.html
+++ b/src/app/views/add-works/add-works.component.html
@@ -11,10 +11,12 @@
         <form class="form-group mt-3" >
 
           <input class="form-control" type="text" name="name" [(ngModel)]="work.title" placeholder="Наименование работы"/><br>
+          <input class="form-control" type="text" name="unit" [(ngModel)]="work.unit" placeholder="Единица измерения"/><br>
+          <input class="form-control" type="text" name="coast" [(ngModel)]="work.coast" placeholder="Стоимость за единицу"/><br>
 
           <label class="form-check-label">Категория: </label>
           <select  class="form-control mb-3"  name="categoryId" (change)="setCategory($event)">
-            <option *ngFor="let category of filterCategories(); let i = index" value="{{i}}"   [selected]="work.category.category_id === category.category_id">{{category.title}}</option>
+            <option *ngFor="let category of filterCategories(); let i = index" value="{{i}}"   [selected]="work.category.categoryId === category.categoryId">{{category.title}}</option>
           </select>
           <hr>
 
@@ -24,10 +26,10 @@
           </select>
           <hr>
 
-          <input class="form-control" type="date" name="localDate"  [(ngModel)]="work.localDate" /><br>
-          <button class="btn  btn-primary" (click)="saveTask()">Сохранить</button>
+          <input class="form-control" type="date" name="localDate"  [(ngModel)]="work.creationDate" /><br>
+          <button class="btn  btn-primary" (click)="saveWork()">Сохранить</button>
           <button class="btn  btn-primary" (click)="hideComponent()">Отмена</button>
-          <button *ngIf="work.id" class="btn  btn-primary ml-3" (click)="deleteTask(work.id)">Удалить</button>
+          <button *ngIf="work.id" class="btn  btn-primary ml-3" (click)="deleteWork(work.id)">Удалить</button>
 
         </form>
 
