Соритровка по названию, подгруппе и дате. Поиск по названию

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <app-add-works #addWork (closeEvent)="works.loadWorks($event)"></app-add-works>
 
-  <app-categories (categoryEvent)="works.fillViewWorks()"></app-categories>
+  <app-categories (categoryEvent)="works.loadWorks($event)"></app-categories>
 
   <div class="main-panel">
     <!-- Navbar -->
