Фильтрация по подкатегории + Комментарии к works.component.ts

--- a/src/app/views/works/works.component.html
+++ b/src/app/views/works/works.component.html
@@ -4,29 +4,30 @@
       <div class="card-header card-header-warning">
         <div class="row">
           <div class="col-lg-2">
-            <h4 class="card-title">Прайс-лист</h4>
-            <p class="card-category">{{currentCategory.title}}</p>
+            <h3 class="card-title">Прайс-лист</h3>
+            <h4 class="card-category">{{currentCategory.title}}</h4>
           </div>
           <div class="col-lg-2">
             <input  class="form-control my-3" type="text" [(ngModel)]="filters.keyword" placeholder="Поиск по названию" (input)="findWorks()"/>
           </div>
           <div class="col-lg-3">
-            <!--<label class="form-check-label">Статус задач: </label>
-            <select  class="form-control mb-3"  name="statusFilter"  (change)="changeCompleted($event)">
-              <option  value="1">На выполнении</option>
-              <option  value="2">Завершенные задачи</option>
-              <option  value="3">Все задачи</option>
-            </select>-->
+            <label class="form-check-label">Подкатегория:</label>
+            <select  class="form-control mb-3"  name="subCategories" [(ngModel)]="filters.subCategory"(change)="subcategoryChanged()" >
+              <option value="0">Все</option>
+              <option *ngFor="let subCategory of currentSubCategories; let i = index " value="{{subCategory.subCategoryId}}">
+                {{subCategory.title}}
+              </option>
+            </select>
           </div>
           <div class="col-lg-3">
             <label class="form-check-label">Упорядочить по</label>
             <select  class="form-control mb-3"  name="sortBy" [(ngModel)]="filters.sortBy" (change)="orderViewWorks()">
-              <option value="5">Упорядочить по Дате &#8595;</option>
-              <option value="6">Упорядочить по Дате &#8593;</option>
               <option value="1">Упорядочить по Названию &#8593;</option>
               <option value="2">Упорядочить по Названию &#8595;</option>
               <option value="3">Упорядочить по Подкатегории &#8593;</option>
               <option value="4">Упорядочить по Подкатегории &#8595;</option>
+              <option value="5">Упорядочить по Дате &#8593;</option>
+              <option value="6">Упорядочить по Дате &#8595;</option>
             </select>
           </div>
           <div class="col-lg-2">
