--- a/src/app/views/add-works/add-works.component.html
+++ b/src/app/views/add-works/add-works.component.html
@@ -29,7 +29,7 @@
           <hr>
 
           <input class="form-control" type="date" name="localDate"  [(ngModel)]="work.creationDate" /><br>
-          <button class="btn  btn-primary" (click)="saveWork()">Сохранить</button>
+          <button class="btn  btn-primary" [disabled]="disabled"  (click)="saveWork()">Сохранить</button>
           <button class="btn  btn-primary" (click)="hideComponent()">Отмена</button>
           <button *ngIf="work.id" class="btn  btn-primary ml-3" (click)="deleteWork(work.id)">Удалить</button>
 
